# Agenticlane

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
agenticlane/: __init__.py
agenticlane/agents/: __init__.py  litellm_provider.py  llm_provider.py  mock_llm.py
agenticlane/cli/: main.py
agenticlane/config/: knobs.py  loader.py  models.py
agenticlane/distill/: __init__.py  evidence.py  registry.py
agenticlane/execution/: __init__.py  adapter.py  config_patcher.py  docker_adapter.py  grid_snap.py  librelane_adapter.py  macro_cfg.py  patch_materialize.py  state_handoff.py  state_rebase.py  workspaces.py
agenticlane/judge/: __init__.py  ensemble.py  scoring.py
agenticlane/knowledge/: __init__.py  chroma_adapter.py  migrate_collections.py  query_builder.py  retriever.py
agenticlane/orchestration/: agent_loop.py  checkpoint.py  cognitive_retry.py  compaction.py  constraint_guard.py  cycle_detection.py  deadlock.py  gc.py  graph.py  manifest.py  orchestrator.py  parallel.py  plateau.py  pruning.py  rollback.py  scan_types.py  scheduler.py  sdc_scanner.py  tcl_scanner.py  zero_shot.py
agenticlane/reporting/: dashboard.py  dashboard_api.py  dashboard_events.py  dashboard_runner.py  report.py
agenticlane/schemas/: __init__.py  constraints.py  evidence.py  execution.py  judge.py  knowledge.py  llm.py  metrics.py  patch.py  specialist.py
dashboard-ui/: index.html  package-lock.json  package.json  vite.config.ts
dashboard-ui/src/: App.tsx  api.ts  constants.ts  main.tsx
docs/architecture/: ARCHITECTURE.md  SPEC_GAPS.md  TECH_DECISIONS.md
docs/integration/: LIBRELANE_INTEGRATION.md
docs/planning/: master_plan.md
scripts/: process_sprites.py
tests/: conftest.py  test_auto_sizing.py  test_hierarchical.py  test_manifest.py  test_registries.py  test_smoke.py
tracking/: PROGRESS.md  TESTING.md  WORKLOG.md
(+167 files in other folders)
